alert-words: Fix overlapping of alert words. the existing issue was when one or more alert words were substrings of a bigger word, they overlapped the parent alert word, incase they were created before the parent word, or the parent word was not highlighted , incase the parent word was created after the substrings Reason: 1.The substrings were converted into '<span class='alert-word'>substring </span>' , thus preventing the regex to find the larger word , or 2.The parent word was highighted, but the substrings were still being found by regex, and they were overlapping the parent words' css. Solution: 1.converted the opacity of class alert-word to 1.0 2.in the backend, whenever alert-words are returned, they were sorted in descending order and returned 3.the path related to GET Request r'^users/me/alert_words$' was removed, as it was obsolete.
Fixes:#9157

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2726,7 +2726,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
 }
 
 .alert-word {
-    background-color: hsla(102, 85%, 57%, 0.5);
+    background-color: hsla(102, 85%, 57%, 1.0);
 }
 
 #organization h1,
